--- a/src/app/modules/requirement-optimizer/components/property-edit/components/pattern-occurrence-absence/pattern-occurrence-absence.component.html
+++ b/src/app/modules/requirement-optimizer/components/property-edit/components/pattern-occurrence-absence/pattern-occurrence-absence.component.html
@@ -5,6 +5,8 @@
 				<mat-card-title>After</mat-card-title>
 			</mat-card>
 		</div>
+  </div>
+  <div class="row" style="margin-bottom: 15px;">
 		<div class="col">
 			<app-predicate-edit [dataset]="dataset" [event]="property?.getScope()?.getQ()!" (eventChange)="onPropertyChange()"></app-predicate-edit>
 		</div>
@@ -15,9 +17,13 @@
 				<mat-card-title>it's never the case that</mat-card-title>
 			</mat-card>
 		</div>
+  </div>
+  <div class="row" style="margin-bottom: 15px;">
 		<div class="col-md">
 			<app-predicate-edit [dataset]="dataset" [event]="absence.getP()" (eventChange)="onPropertyChange()"></app-predicate-edit>
 		</div>
+  </div>
+  <div class="row" style="margin-bottom: 15px;">
 		<div class="col-md-auto">
 			<mat-card>
 				<mat-card-title>[holds]</mat-card-title>
