--- a/src/app/modules/requirement-optimizer/components/predicate-edit/predicate-edit.component.scss
+++ b/src/app/modules/requirement-optimizer/components/predicate-edit/predicate-edit.component.scss
@@ -1,6 +1,6 @@
 .plotMarker{
   position: absolute;
-  background-color: red;
+  background-color: #3f51b5;
   height: 100%;
   width: 2px;
   display: none
