Use pre-selected logic operator for refinement

--- a/src/app/modules/requirement-optimizer/components/predicate-edit/predicate-edit.component.html
+++ b/src/app/modules/requirement-optimizer/components/predicate-edit/predicate-edit.component.html
@@ -2,7 +2,7 @@
 	<mat-card-title>
 		<!-- {{ '{' + event.getName() + '}' }} -->
 		{{ '{' + predicateForm.value.fName + '}' }}
-		<button (click)="onClickRefinement()" mat-icon-button [disabled]="!property?.valid" color="primary" aria-label="Requirement Refinement" style="position: absolute; top: 8px; right: 64px;">
+		<button (click)="onClickRefinement()" mat-icon-button [disabled]="!property?.valid || !requiresComparisonValue(logicOperator.value)" color="primary" aria-label="Requirement Refinement" style="position: absolute; top: 8px; right: 64px;">
 			<mat-icon>settings_suggest</mat-icon>
 		</button>
 		<button mat-icon-button (click)="editFormExpaneded = !editFormExpaneded" style="position: absolute; top: 8px; right: 12px;" aria-label="Edit">
