Add time refinement for Absence & Occurence pattenr

--- a/src/app/modules/requirement-optimizer/components/property-edit/components/pattern-occurrence-universality/pattern-occurrence-universality.component.html
+++ b/src/app/modules/requirement-optimizer/components/property-edit/components/pattern-occurrence-universality/pattern-occurrence-universality.component.html
@@ -30,9 +30,9 @@
 			</mat-card>
 		</div>
 	</div>
-	<!-- 	<div class="row">
+	<div class="row">
 		<div class="col-md-6">
 			<app-timebound-constraint-edit [dataset]="dataset" [property]="property" [timebound]="universality.getPTimeBound()" (timeboundChange)="onPropertyChange()"></app-timebound-constraint-edit>
 		</div>
-	</div> -->
+	</div>
 </ng-container>
