--- a/src/app/modules/requirement-optimizer/components/property-edit/components/pattern-occurrence-absence/pattern-occurrence-absence.component.html
+++ b/src/app/modules/requirement-optimizer/components/property-edit/components/pattern-occurrence-absence/pattern-occurrence-absence.component.html
@@ -5,8 +5,8 @@
 				<mat-card-title>After</mat-card-title>
 			</mat-card>
 		</div>
-  </div>
-  <div class="row" style="margin-bottom: 15px;">
+	</div>
+	<div class="row" style="margin-bottom: 15px;">
 		<div class="col">
 			<app-predicate-edit [dataset]="dataset" [property]="property" [event]="property?.getScope()?.getQ()!" (eventChange)="onPropertyChange()"></app-predicate-edit>
 		</div>
@@ -17,22 +17,22 @@
 				<mat-card-title>it's never the case that</mat-card-title>
 			</mat-card>
 		</div>
-  </div>
-  <div class="row" style="margin-bottom: 15px;">
+	</div>
+	<div class="row" style="margin-bottom: 15px;">
 		<div class="col-md">
 			<app-predicate-edit [dataset]="dataset" [property]="property" [event]="absence.getP()" (eventChange)="onPropertyChange()"></app-predicate-edit>
 		</div>
-  </div>
-  <div class="row" style="margin-bottom: 15px;">
+	</div>
+	<div class="row" style="margin-bottom: 15px;">
 		<div class="col-md-auto">
 			<mat-card>
 				<mat-card-title>[holds]</mat-card-title>
 			</mat-card>
 		</div>
 	</div>
-	<!-- <div class="row">
+	<div class="row">
 		<div class="col-md-6">
 			<app-timebound-constraint-edit [dataset]="dataset" [property]="property" [timebound]="absence.getPTimeBound()" (timeboundChange)="onPropertyChange()"></app-timebound-constraint-edit>
 		</div>
-	</div> -->
+	</div>
 </ng-container>
