--- a/src/app/modules/requirement-optimizer/components/timebound-constraint-edit/timebound-constraint-edit.component.html
+++ b/src/app/modules/requirement-optimizer/components/timebound-constraint-edit/timebound-constraint-edit.component.html
@@ -32,7 +32,7 @@
 					</tr>
 					<tr>
 						<td>
-							<mat-radio-button value="after">after</mat-radio-button>
+							<mat-radio-button value="after" [disabled]="propertyLimitedToWithinTimebound(property)">after</mat-radio-button>
 						</td>
 						<td [style.visibility]="timeboundForm.value.type === 'after' ? 'visible' : 'hidden' ">
 							<mat-form-field appearance="fill">
@@ -42,7 +42,7 @@
 					</tr>
 					<tr>
 						<td>
-							<mat-radio-button value="between">between</mat-radio-button>
+							<mat-radio-button value="between" [disabled]="propertyLimitedToWithinTimebound(property)">between</mat-radio-button>
 						</td>
 						<td [style.visibility]="timeboundForm.value.type === 'between' ? 'visible' : 'hidden' ">
 							<mat-form-field appearance="fill">
