--- a/src/app/modules/requirement-optimizer/components/timebound-constraint-refinement/timebound-constraint-refinement.component.html
+++ b/src/app/modules/requirement-optimizer/components/timebound-constraint-refinement/timebound-constraint-refinement.component.html
@@ -1,13 +1,17 @@
 <h2 mat-dialog-title>Timebound Refinement</h2>
 <mat-dialog-content class="mat-typography">
-	<!-- <h3>Develop across all platforms</h3>
-	<p>Learn one way to build applications with Angular and reuse your code and abilities to build
-		apps for any deployment target. For web, mobile web, native mobile and native desktop.</p> -->
 	<mat-spinner *ngIf="isLoading" style="margin: 0 auto;"></mat-spinner>
+	<p *ngIf="!isLoading">
+		<ng-container *ngIf="refinedTimebound; else noRefinement">
+			<strong>Refinement: </strong>{{ refinedTimebound.getSpecificationAsSEL() }}
+		</ng-container>
+	</p>
 	<div #chart></div>
-
 </mat-dialog-content>
 <mat-dialog-actions align="end" *ngIf="!isLoading">
 	<button mat-button mat-dialog-close>Cancel</button>
-	<button mat-flat-button color="primary" (click)="onConfirm()" cdkFocusInitial>Confirm Refinement</button>
+	<button *ngIf="!isLoading && refinedTimebound" mat-flat-button color="primary" (click)="onConfirm()" cdkFocusInitial>Confirm Refinement</button>
 </mat-dialog-actions>
+<ng-template #noRefinement>
+	<p>no refinement found for the given specification</p>
+</ng-template>
