--- a/src/app/shared/components/csv-loader/csv-loader.component.html
+++ b/src/app/shared/components/csv-loader/csv-loader.component.html
@@ -4,7 +4,7 @@
     <div class="col-12">
 
         <!-- Upload selection -->
-        <mat-form-field appearance="fill" style="margin-right: 16px;">
+        <mat-form-field appearance="fill" style="margin-right: 16px; width: 200px">
             <mat-label>File Source</mat-label>
             <mat-select [(ngModel)]="sourceType" value="upload">
                 <mat-option value="demo">Demo</mat-option>
@@ -14,7 +14,7 @@
         </mat-form-field>
 
         <!-- Selection: Demo file -->
-        <mat-form-field *ngIf="sourceType === 'demo'" appearance="fill">
+        <mat-form-field *ngIf="sourceType === 'demo'" appearance="fill" style="width: 200px">
             <mat-label>Demo File</mat-label>
             <mat-select (selectionChange)="onDemoFileChange($event)">
                 <mat-option *ngFor="let file of assetCsvFiles" [value]="file">
@@ -47,54 +47,62 @@
             <mat-slide-toggle [(ngModel)]="dbIsCustomQuery">Custom Query</mat-slide-toggle>
             <br>
 
-            <ng-container *ngIf="!dbIsCustomQuery">
+            <div>
+                <mat-form-field appearance="fill" style="width: 200px">
+                    <mat-label>Choose a starting time</mat-label>
+                    <input matInput [ngxMatDatetimePicker]="dtPickerStart" [(ngModel)]="selectedStartDatetime">
+                    <mat-datepicker-toggle matSuffix [for]="$any(dtPickerStart)"></mat-datepicker-toggle>
+                    <ngx-mat-datetime-picker #dtPickerStart [showSpinners]="true" [stepHour]="1" [stepMinute]="1"
+                                             [stepSecond]="1" [enableMeridian]="true"
+                                             [showSeconds]="true"></ngx-mat-datetime-picker>
+                </mat-form-field>
 
-              <mat-form-field appearance="fill">
-                  <mat-label>Choose a metric</mat-label>
-                  <mat-select (selectionChange)="onMetricChange($event)" multiple>
-                      <mat-option *ngFor="let metric of dbMetricLabels" [value]="metric">
-                          {{ metric }}
-                      </mat-option>
-                  </mat-select>
-              </mat-form-field>
+                <mat-form-field appearance="fill" style="margin-left: 16px; width: 200px">
+                    <mat-label>Choose an ending time</mat-label>
+                    <input matInput [ngxMatDatetimePicker]="dtPickerEnd" [(ngModel)]="selectedEndDatetime">
+                    <mat-datepicker-toggle matSuffix [for]="$any(dtPickerEnd)"></mat-datepicker-toggle>
+                    <ngx-mat-datetime-picker #dtPickerEnd [showSpinners]="true" [stepHour]="1" [stepMinute]="1"
+                                             [stepSecond]="1" [enableMeridian]="true"
+                                             [showSeconds]="true"></ngx-mat-datetime-picker>
+                </mat-form-field>
 
-              <mat-form-field appearance="fill" style="margin-left: 16px;">
-                  <mat-label>Choose a starting time</mat-label>
-                  <input matInput [ngxMatDatetimePicker]="dtPickerStart" [(ngModel)]="selectedStartDatetime">
-                  <mat-datepicker-toggle matSuffix [for]="$any(dtPickerStart)"></mat-datepicker-toggle>
-                  <ngx-mat-datetime-picker #dtPickerStart [showSpinners]="true" [stepHour]="1" [stepMinute]="1"
-                                           [stepSecond]="1" [enableMeridian]="true"
-                                           [showSeconds]="true"></ngx-mat-datetime-picker>
-              </mat-form-field>
+                <mat-form-field appearance="fill" style="margin-left: 16px; width: 200px">
+                    <mat-label>Choose a step size (e.g. 1m, 1h, 1d)</mat-label>
+                    <input matInput type="text" [(ngModel)]="selectedStepSize">
+                </mat-form-field>
 
-              <mat-form-field appearance="fill" style="margin-left: 16px;">
-                  <mat-label>Choose an ending time</mat-label>
-                  <input matInput [ngxMatDatetimePicker]="dtPickerEnd" [(ngModel)]="selectedEndDatetime">
-                  <mat-datepicker-toggle matSuffix [for]="$any(dtPickerEnd)"></mat-datepicker-toggle>
-                  <ngx-mat-datetime-picker #dtPickerEnd [showSpinners]="true" [stepHour]="1" [stepMinute]="1"
-                                           [stepSecond]="1" [enableMeridian]="true"
-                                           [showSeconds]="true"></ngx-mat-datetime-picker>
-              </mat-form-field>
+                <button mat-raised-button color="primary" (click)="onQueryButtonPressed()" style="margin-left: 8px;">
+                    Query
+                </button>
+            </div>
 
-              <mat-form-field appearance="fill" style="margin-left: 16px;">
-                  <mat-label>Choose a step size (e.g. 1m, 1h, 1d)</mat-label>
-                  <input matInput type="text" [(ngModel)]="selectedStepSize">
-              </mat-form-field>
+            <div>
+                <ng-container *ngIf="!dbIsCustomQuery">
 
-            </ng-container>
+                    <mat-form-field appearance="fill" style="width: 632px">
+                        <mat-label>Choose a metric</mat-label>
+                        <mat-select (selectionChange)="onMetricChange($event)" multiple>
+                            <mat-option *ngFor="let metric of dbMetricLabels" [value]="metric">
+                                {{ metric }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
 
-            <ng-container *ngIf="dbIsCustomQuery">
+                </ng-container>
 
-              <mat-form-field appearance="fill" style="width: 50%;">
-                  <mat-label>PromQL Expression</mat-label>
-                  <input [(ngModel)]="customQuery" matInput type="text" (keyup.enter)="onQueryButtonPressed()"/>
-              </mat-form-field>
+                <ng-container *ngIf="dbIsCustomQuery">
 
-            </ng-container>
+                    <mat-form-field appearance="fill" style="width: 632px">
+                        <mat-label>Enter PromQL Query...</mat-label>
+                        <textarea
+                            [(ngModel)]="customQuery"
+                            matInput type="text"
+                            cdkTextareaAutosize cdkAutosizeMaxRows="20" cdkAutosizeMinRows="7">
+                    </textarea>
+                    </mat-form-field>
 
-          <button mat-raised-button color="primary" (click)="onQueryButtonPressed()" style="margin-left: 8px;">
-            Query
-          </button>
+                </ng-container>
+            </div>
 
         </ng-container>
 
