--- a/src/app/shared/components/graph-plotter/graph-plotter.component.html
+++ b/src/app/shared/components/graph-plotter/graph-plotter.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="properties && properties.length > 1" class="selected-properties">
-	<mat-checkbox *ngFor="let selectedProperty of selectedProperties" [value]="selectedProperty.property" [checked]="selectedProperty.selected" (change)="onSelectedMetricChange($event)">{{ selectedProperty.property }}</mat-checkbox>
+	<mat-checkbox *ngFor="let property of properties" [value]="property" [checked]="!deactivatedProperties.has(property)" (change)="onSelectedMetricChange($event)">{{ property }}</mat-checkbox>
 </div>
 <div #chart></div>
 <div *ngIf="displayPlaceholder" [ngStyle]="{ 'height.px': height }" class="no-data">Graph</div>
