added remote predicate refinement

--- a/src/app/modules/requirement-optimizer/components/predicate-refinement/predicate-refinement.component.html
+++ b/src/app/modules/requirement-optimizer/components/predicate-refinement/predicate-refinement.component.html
@@ -5,11 +5,13 @@
 		apps for any deployment target. For web, mobile web, native mobile and native desktop.</p> -->
 	<mat-spinner *ngIf="isLoading" style="margin: 0 auto;"></mat-spinner>
 	<!-- <div #chart></div> -->
-	<ng-container *ngFor="let validationResponse of validationResponses; let i = index;">
-		<div style="margin-bottom: 8px; margin-right: 8px; display: inline-block;">
-			<button mat-flat-button (click)="onConfirm(i)" color="primary" [ngStyle]="validationResponse.result ? {'background-color': 'green'} : {'background-color': 'red'}">{{ i }}</button>
-		</div>
-	</ng-container>
+    <ng-container *ngIf="refinementResponse?.result">
+        <ng-container *ngFor="let result of refinementResponse!.result; let i = index;">
+            <div style="margin-bottom: 8px; margin-right: 8px; display: inline-block;">
+                <button mat-flat-button (click)="onConfirm(i)" color="primary" [ngStyle]="result ? {'background-color': 'green'} : {'background-color': 'red'}">{{ i }}</button>
+            </div>
+        </ng-container>
+    </ng-container>
 </mat-dialog-content>
 <mat-dialog-actions align="end" *ngIf="!isLoading">
 	<button mat-button mat-dialog-close>Cancel</button>
